# Slide-of-Life

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  action.yml  pyproject.toml
.github/: RELEASE_CHECKLIST.md
.github/workflows/: ci.yml  publish.yml  release.yml  slidelineage-example.yml
docs/: product-spec.md  references.md  releasing.md  report-schema.md  scientific-method.md
examples/demo/: README.md  schema-map.yaml
scripts/: extract_release_notes.py  generate_checksums.py  generate_demo.py  run_action.py  validate_distribution.py  validate_release_ref.py  validate_skill.py
skills/slide-of-life/: SKILL.md
skills/slide-of-life/agents/: openai.yaml
skills/slide-of-life/examples/: basic-audit.md  github-action.md  repair-audit.md
skills/slide-of-life/references/: ai-schema-assistance.md  audit-workflow.md  input-preparation.md  report-interpretation.md  troubleshooting.md
src/slidelineage/: __init__.py  __main__.py  ai_onboarding.py  ai_schema.py  audit.py  cli.py  config.py  detectors.py  errors.py  graph.py  html_report.py  image_fingerprints.py  ingest.py  models.py  normalization.py  policy.py  policy_evaluation.py  repair.py  reporting.py  schema_mapping.py
tests/: conftest.py  test_ai_onboarding.py  test_ai_schema.py  test_audit.py  test_cli_audit.py  test_cli_foundation.py  test_config.py  test_demo.py  test_detectors.py  test_distribution_package.py  test_github_action.py  test_graph.py  test_image_fingerprints.py  test_ingest.py  test_models.py  test_normalization.py  test_policy.py  test_policy_evaluation.py  test_publication_workflow.py  test_release_integrity.py  test_repair.py  test_reporting.py  test_skill_package.py  test_validate_distribution.py
